--- a/common-build/Cargo.toml
+++ b/common-build/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 description = "Helper functions for Rust bindings for the different NIX libraries"
 repository = "https://github.com/0xCCF4/nix-rs-bindings"
 license = "MIT"
+publish = false
 
 [dependencies]
 pkg-config = "0.3.32"
