--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = [ "nix-exprc-sys","nix-flakec-sys", "nix-mainc-sys",  "nix-storec-sys", "common-build", "nix-utilc-sys"]
+members = [ "nix-exprc-sys","nix-flakec-sys", "nix-mainc-sys",  "nix-storec-sys", "common-build", "nix-utilc-sys", "examples/example-eval-expression", "examples/example-plugin-primop"]
