--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v31
       - name: Build
-        run: nix develop -c bash -c "RUSTDOCFLAGS="--enable-index-page -Zunstable-options" cargo doc --release --no-deps"
+        run: nix develop -c bash -c 'RUSTDOCFLAGS="--enable-index-page -Zunstable-options" cargo doc --release --no-deps'
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
